--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-Flask==0.12.2
-Jinja2==2.10
-MarkupSafe==1.0
-Werkzeug==0.14.1
-click==6.7
-itsdangerous==0.24
+Flask
+Jinja2
+MarkupSafe
+Werkzeug
+click
+itsdangerous
+
+ffmpeg-python
 
 gunicorn
