--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ Flask = "*"
 Flask-SQLAlchemy = "*"
 Flask-WTF = "*"
 pymysql = "*"
+flask-migrate = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.6"
