--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,70 @@
-aiocontextvars==0.2.2
-alembic==1.4.0
-appdirs==1.4.3
-aspy.yaml==1.3.0
-async-generator==1.10
-attrs==19.3.0
-black==19.10b0
-blessings==1.7
-certifi==2019.9.11
-certipy==0.1.3
-cffi==1.14.0
-cfgv==2.0.1
-chardet==3.0.4
-click==7.1.2
-click-completion==0.5.2
-configparser==4.0.2
-contextvars==2.4
-cryptography==2.8
-czech-sort==0.4
-identify==1.4.10
-idna==2.10
-immutables==0.14
-importlib-metadata==1.3.0
-importlib-resources==1.0.2
-inflect==4.0.0
-inquirer==2.6.3
-Jinja2==2.11.2
-jupyter-telemetry==0.0.5
-jupyterhub==1.1.0
-loguru==0.4.1
-Mako==1.1.1
-MarkupSafe==1.1.1
-more-itertools==8.0.2
-nodeenv==1.3.4
-notify-py==0.2.2
-oauthlib==3.1.0
-pamela==1.0.0
-pathspec==0.7.0
-pbr==5.4.5
-pendulum==2.1.0
-pipenv==2018.11.26
-pre-commit==1.21.0
-psutil==5.6.7
-PTable==0.9.2
-pycparser==2.19
-pyOpenSSL==19.1.0
-python-dateutil==2.8.1
-python-editor==1.0.4
-python-json-logger==0.1.11
-pytzdata==2020.1
-readchar==2.0.1
-regex==2020.1.8
-requests==2.24.0
-ruamel.yaml==0.16.10
-ruamel.yaml.clib==0.2.0
-shellingham==1.3.2
-six==1.15.0
-spybar==0.1.0
-sqlacodegen==2.1.0
-SQLAlchemy==1.3.12
-sqlint==0.2.4
-togglCli==2.2.0
-toml==0.10.0
-tqdm==4.41.1
-typed-ast==1.4.1
-Unidecode==1.1.1
-urllib3==1.25.10
-validate-email==1.3
-virtualenv==16.7.7
-virtualenv-clone==0.5.3
-zipp==0.6.0
+aiocontextvars
+alembic
+appdirs
+aspy.yaml
+async-generator
+attrs
+blessings
+certifi
+certipy
+cffi
+cfgv
+chardet
+click
+click-completion
+configparser
+contextvars
+cryptography
+czech-sort
+identify
+idna
+immutables
+importlib-metadata
+importlib-resources
+inflect
+inquirer
+Jinja2
+jupyter-telemetry
+jupyterhub
+loguru
+Mako
+MarkupSafe
+more-itertools
+nodeenv
+notify-py
+oauthlib
+pamela
+pathspec
+pbr
+pendulum
+pipenv
+pre-commit
+psutil
+PTable
+pycparser
+pyOpenSSL
+python-dateutil
+python-editor
+python-json-logger
+pytzdata
+readchar
+regex
+requests
+ruamel.yaml
+ruamel.yaml.clib
+shellingham
+six
+spybar
+sqlacodegen
+SQLAlchemy
+sqlint
+togglCli
+toml
+tqdm
+typed-ast
+Unidecode
+urllib3
+validate-email
+virtualenv
+virtualenv-clone
+zipp
