Add flask security package

--- a/Pipfile
+++ b/Pipfile
@@ -18,6 +18,7 @@ Flask-WTF = "*"
 pymysql = "*"
 flask-migrate = "*"
 flask-classful = "*"
+flask-security-too = "*"
 
 [requires]
 python_version = "3.6"
