Add bcrypt packages

--- a/Pipfile
+++ b/Pipfile
@@ -19,6 +19,7 @@ pymysql = "*"
 flask-migrate = "*"
 flask-classful = "*"
 flask-security-too = "*"
+bcrypt = "*"
 
 [requires]
 python_version = "3.6"
