Add education blueprint and prototype genetic world simulation (#38)
* Add education blueprint and base of world

* Add much more

* Add chart and more

* Adding model and some other old changes

* Make work again

Co-authored-by: Jan Peterka <janmpeterka@gmail.com>

--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,8 @@ flask-migrate = "*"
 flask-classful = "*"
 flask-security-too = "*"
 bcrypt = "*"
+jsonpickle = "*"
+flask-charts = "*"
 
 [requires]
 python_version = "3.9"
